[package]
name = "alice-analytics"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto <ext-sakamoro@github.com>"]
description = "High-Performance Telemetry & Statistical Estimation with Probabilistic Data Structures"
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-Analytics"
keywords = ["analytics", "sketch", "hyperloglog", "differential-privacy", "streaming"]
categories = ["algorithms", "data-structures", "science"]

[lib]
name = "alice_analytics"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
std = []
simd = []  # SIMD-accelerated hash and register updates
queue = ["alice-queue"]  # ALICE-Queue bridge (Message → MetricEvent streaming)
pyo3 = ["dep:pyo3", "dep:numpy", "std"]  # Python bindings

[dependencies]
# ALICE-Queue bridge (optional)
alice-queue = { path = "../ALICE-Queue", optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
# criterion = "0.5"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
