[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "alice-analytics"
requires-python = ">=3.8"
description = "Streaming Analytics with Probabilistic Data Structures"
license = { text = "AGPL-3.0" }
authors = [{ name = "Moroya Sakamoto" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3"]
